# projective-hw-sim

./: .gitignore  Cargo.toml  README.md  projective_hw_sim.py
sims/: cg_correctness.py  cg_hw_sim.py  conjugate_gradient_sim.py
src/: comparison.rs  config.rs  design_explorer.rs  explorer.rs  geometry.rs  lib.rs  main.rs  profiling.rs  simulation.rs  workloads.rs
